--- a/01-Fundamentals-Part-1/starter/index.html
+++ b/01-Fundamentals-Part-1/starter/index.html
@@ -32,8 +32,10 @@
   <h1>JavaScript Fundamentals – Part 1</h1>
 </body>
 
-<script src="script.js">
+<!-- <script src="assignment.js"></script> -->
 
-</script>
+<script src="challengeOne.js"></script>
+
+<!-- <script src="script.js"></script> -->
 
 </html>
