--- a/01-Fundamentals-Part-1/starter/index.html
+++ b/01-Fundamentals-Part-1/starter/index.html
@@ -34,8 +34,8 @@
 
 <!-- <script src="assignment.js"></script> -->
 
-<script src="challengeOne.js"></script>
+<!-- <script src="challenge.js"></script> -->
 
-<!-- <script src="script.js"></script> -->
+<script src="script.js"></script>
 
 </html>
