--- a/01-Fundamentals-Part-1/starter/index.html
+++ b/01-Fundamentals-Part-1/starter/index.html
@@ -32,10 +32,10 @@
   <h1>JavaScript Fundamentals – Part 1</h1>
 </body>
 
-<!-- <script src="assignment.js"></script> -->
+<script src="assignment.js"></script>
 
 <!-- <script src="challenge.js"></script> -->
 
-<script src="script.js"></script>
+<!-- <script src="script.js"></script> -->
 
 </html>
